Signed-off-by: amit <amitkumar1211@gmail.com>

--- a/order-mgmt/customer-service/src/main/resources/application.properties
+++ b/order-mgmt/customer-service/src/main/resources/application.properties
@@ -5,6 +5,8 @@
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 
+spring.application.name=customerService
+
 logging.level.com.amit=DEBUG
 #output to a temp_folder/file
 logging.file.name=C://temp/app-Default.log
