--- a/order-mgmt/app-config/customer-service/application-dev.properties
+++ b/order-mgmt/app-config/customer-service/application-dev.properties
@@ -1,15 +1,13 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/order_mgmt?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=root
-#
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/order_mgmt?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.application.name=customerService
-spring.profiles.active=dev
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 logging.level.com.amit=DEBUG
 #output to a temp_folder/file
-logging.file.name=app-Default.log
+logging.file.name=app-dev.log
 
  # Logging pattern for the console
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
